@@ -77,6 +77,20 @@ inline int p9_is_proto_dotu(struct p9_client *clnt)
 }
 EXPORT_SYMBOL(p9_is_proto_dotu);
 
+/*
+ * Some error codes are taken directly from the server replies,
+ * make sure they are valid.
+ */
+static int safe_errno(int err)
+{
+	if ((err > 0) || (err < -MAX_ERRNO)) {
+		P9_DPRINTK(P9_DEBUG_ERROR, "Invalid error code %d\n", err);
+		return -EPROTO;
+	}
+	return err;
+}
+
+
 /* Interpret mount option for protocol version */
 static int get_protocol_version(const substring_t *name)
 {
@@ -581,7 +595,7 @@ static struct p9_req_t *p9_client_vprepare_req(struct p9_client *c,
 	return req;
 reterr:
 	p9_free_req(c, req);
-        return ERR_PTR(err);
+        return ERR_PTR(safe_errno(err));
 }
 
 static struct p9_req_t *p9_client_prepare_req(struct p9_client *c,
@@ -697,7 +711,7 @@ reterr:
 	P9_DPRINTK(P9_DEBUG_MUX, "exit: client %p op %d error: %d\n", c, type,
 									err);
 	p9_free_req(c, req);
-	return ERR_PTR(err);
+	return ERR_PTR(safe_errno(err));
 }
 
 static struct p9_fid *p9_fid_create(struct p9_client *clnt)
