@@ -4,6 +4,7 @@ In v9fs-2.6.38.5-21:
 * Backport [PATCH 2/4] 9P: fix test at the end of p9_write_work()
 * Backport [PATCH 3/4] 9P: Fix race in p9_write_work()
 * Backport [PATCH 4/4] 9P: Fix race between p9_write_work() and p9_fd_request()
+* Backport 9P : Check errno validity
 
 In v9fs-2.6.38.5-20:
 * Get xattr and posix acl support working
